@@ -6,526 +6,356 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.json.JSONArray;
-import org.json.JSONException;
 import org.json.JSONObject;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
-import br.com.lett.crawlernode.core.fetcher.FetchMode;
 import br.com.lett.crawlernode.core.fetcher.models.Request;
 import br.com.lett.crawlernode.core.fetcher.models.Request.RequestBuilder;
 import br.com.lett.crawlernode.core.models.Card;
+import br.com.lett.crawlernode.core.models.CategoryCollection;
 import br.com.lett.crawlernode.core.models.Product;
+import br.com.lett.crawlernode.core.models.ProductBuilder;
 import br.com.lett.crawlernode.core.session.Session;
 import br.com.lett.crawlernode.core.task.impl.Crawler;
 import br.com.lett.crawlernode.util.CommonMethods;
 import br.com.lett.crawlernode.util.CrawlerUtils;
+import br.com.lett.crawlernode.util.JSONUtils;
 import br.com.lett.crawlernode.util.Logging;
-import br.com.lett.crawlernode.util.MathUtils;
+import br.com.lett.crawlernode.util.Pair;
 import exceptions.OfferException;
+import models.AdvancedRatingReview;
 import models.Marketplace;
 import models.Offer;
 import models.Offer.OfferBuilder;
 import models.Offers;
+import models.RatingsReviews;
 import models.prices.Prices;
 
 public class BrasilRicardoeletroCrawler extends Crawler {
 
-  private static final String HOME_PAGE = "https://www.ricardoeletro.com.br/";
-  private static final String SELLER_NAME = "ricardo eletro";
+   private static final String SELLER_NAME = "ricardo eletro";
 
-  public BrasilRicardoeletroCrawler(Session session) {
-    super(session);
-    super.config.setFetcher(FetchMode.APACHE);
-  }
+   public BrasilRicardoeletroCrawler(Session session) {
+      super(session);
+      super.config.setMustSendRatingToKinesis(true);
+   }
 
-  @Override
-  public boolean shouldVisit() {
-    String href = this.session.getOriginalURL().toLowerCase();
-    return !FILTERS.matcher(href).matches() && (href.startsWith(HOME_PAGE));
-  }
+   @Override
+   public List<Product> extractInformation(Document doc) throws Exception {
+      super.extractInformation(doc);
+      List<Product> products = new ArrayList<>();
 
-  @Override
-  public List<Product> extractInformation(Document doc) throws Exception {
-    super.extractInformation(doc);
-    List<Product> products = new ArrayList<>();
+      JSONArray jsonArray = CrawlerUtils.selectJsonArrayFromHtml(doc, "script", "dataLayer = ", ";", false, true);
+      JSONObject productJSON = jsonArray.length() > 0 && jsonArray.get(0) instanceof JSONObject ? jsonArray.getJSONObject(0) : new JSONObject();
 
-    if (isProductPage(doc)) {
-      Logging.printLogDebug(logger, session, "Product page identified: " + this.session.getOriginalURL());
+      if (productJSON.has("productSKUList")) {
+         Logging.printLogDebug(logger, session, "Product page identified: " + this.session.getOriginalURL());
 
-      // ID interno
-      String internalId = null;
-      Element elementInternalID = doc.select("#ProdutoDetalhesCodigoProduto").first();
-      if (elementInternalID != null) {
-        internalId = elementInternalID.text().replaceAll("[^0-9,]+", "").replaceAll("\\.", "").trim();
+         String internalPid = scrapInternalPid(productJSON);
+         String mainId = scrapMainId(productJSON);
+         String ean = JSONUtils.getStringValue(productJSON, "productEAN13");
+         List<String> eans = ean != null && !ean.isEmpty() ? Arrays.asList(ean) : null;
+
+         JSONArray skusArray = JSONUtils.getJSONArrayValue(productJSON, "productSKUList");
+
+         for (Object obj : skusArray) {
+            JSONObject skuJson = obj instanceof JSONObject ? (JSONObject) obj : new JSONObject();
+            String internalId = scrapInternalId(skuJson);
+
+            if (internalId != null) {
+               String name = scrapName(skuJson);
+               String newUrl = JSONUtils.getStringValue(skuJson, "url");
+               String url = newUrl != null ? newUrl : session.getOriginalURL();
+
+               Document docVariation = !internalId.equalsIgnoreCase(mainId) ? scrapVariationHTML(url) : doc;
+
+               String primaryImage = CrawlerUtils.scrapSimplePrimaryImage(docVariation, ".product-info-images .swiper-slide img", Arrays.asList("src"),
+                     "https", "www.imgeletro.com.br");
+               String secondaryImages = CrawlerUtils.scrapSimpleSecondaryImages(docVariation, ".product-info-images .swiper-slide img", Arrays.asList("src"),
+                     "https", "www.imgeletro.com.br", primaryImage);
+               CategoryCollection categories = CrawlerUtils.crawlCategories(docVariation, "#Breadcrumbs a");
+               String description = scrapDescription(docVariation);
+
+               List<Document> sellersHtmls = scrapProductPagePerSeller(docVariation);
+               Map<String, Prices> marketplaceMap = scrapMarketplaceMap(sellersHtmls);
+               Marketplace marketplace = CrawlerUtils.assembleMarketplaceFromMap(marketplaceMap, Arrays.asList(SELLER_NAME), Card.VISA, session);
+               boolean available = CrawlerUtils.getAvailabilityFromMarketplaceMap(marketplaceMap, Arrays.asList(SELLER_NAME));
+               Offers offers = !marketplaceMap.isEmpty() ? scrapOffers(sellersHtmls) : new Offers();
+               Prices prices = CrawlerUtils.getPrices(marketplaceMap, Arrays.asList(SELLER_NAME));
+               Float price = CrawlerUtils.extractPriceFromPrices(prices, Card.VISA);
+               Integer stock = JSONUtils.getIntegerValueFromJSON(skuJson, "stock", 0);
+               RatingsReviews rating = scrapRating(doc);
+
+               Product product = ProductBuilder.create()
+                     .setUrl(url)
+                     .setInternalId(internalId)
+                     .setInternalPid(internalPid)
+                     .setName(name)
+                     .setPrice(price)
+                     .setPrices(prices)
+                     .setAvailable(available)
+                     .setCategory1(categories.getCategory(0))
+                     .setCategory2(categories.getCategory(1))
+                     .setCategory3(categories.getCategory(2))
+                     .setPrimaryImage(primaryImage)
+                     .setSecondaryImages(secondaryImages)
+                     .setDescription(description)
+                     .setMarketplace(marketplace)
+                     .setStock(stock)
+                     .setEans(eans)
+                     .setOffers(offers)
+                     .setRatingReviews(rating)
+                     .build();
+
+               products.add(product);
+            }
+         }
+      } else {
+         Logging.printLogDebug(logger, session, "Not a product page " + this.session.getOriginalURL());
       }
 
-      // Pid
-      String internalPid = crawlInternalPid(doc);
+      return products;
 
-      // Nome
-      String name = null;
-      Element elementName = doc.select("#ProdutoDetalhesNomeProduto h1").first();
-      if (elementName != null) {
-        name = elementName.ownText().replace("'", "").replace("’", "").trim();
+   }
 
-        Element nameVariation = doc.select(".selectAtributo option[selected]").first();
+   private String scrapInternalPid(JSONObject productJSON) {
+      String internalPid = null;
 
-        if (nameVariation != null) {
-          String textName = nameVariation.text();
-
-          if (textName.contains("|")) {
-            name = name + " " + textName.split("\\|")[0].trim();;
-          } else {
-            name = name + " " + textName.trim();
-          }
-        }
+      if (productJSON.has("productID") && !productJSON.isNull("productID")) {
+         internalPid = productJSON.get("productID").toString();
       }
 
-      Document docMarketplace = crawlDocMarketplaces(internalPid);
+      return internalPid;
+   }
 
-      // Marketplace
-      Map<String, Prices> marketplaceMap = crawlMarketplaces(internalPid, docMarketplace, doc);
-      Marketplace marketplace = CrawlerUtils.assembleMarketplaceFromMap(marketplaceMap, Arrays.asList(SELLER_NAME), Card.VISA, session);
+   private String scrapMainId(JSONObject productJSON) {
+      String mainId = null;
 
-      // Prices
-      Prices prices = crawlPricesPrinciaplSeller(marketplaceMap);
-
-      // Disponibilidade
-      boolean available = marketplaceMap.containsKey(SELLER_NAME);
-
-      // Preço
-      Float price = null;
-      Element elementPrice = doc.select("#ProdutoDetalhesPrecoComprarAgoraPrecoDePreco").first();
-      if (elementPrice != null && available) {
-        price = Float.parseFloat(elementPrice.text().replaceAll("[^0-9,]+", "").replaceAll("\\.", "").replaceAll(",", "."));
+      if (productJSON.has("productSKU") && !productJSON.isNull("productSKU")) {
+         mainId = productJSON.get("productSKU").toString();
       }
 
-      // Categorias
-      String category1 = "";
-      String category2 = "";
-      String category3 = "";
-      Elements elementCategories = doc.select("#Breadcrumbs .breadcrumbs-itens").select("a");
+      return mainId;
+   }
 
-      for (Element e : elementCategories) {
-        if (category1.isEmpty()) {
-          category1 = e.text();
-        } else if (category2.isEmpty()) {
-          category2 = e.text();
-        } else if (category3.isEmpty()) {
-          category3 = e.text();
-        }
-      }
-
-      // Imagens
-      Elements elementPrimaryImages = doc.select("#ProdutoDetalhesFotosFotosPequenas").select("a.zoom-gallery img");
-      String primaryImage = null;
-      String secondaryImages = null;
-      JSONArray secondaryImagesArray = new JSONArray();
-
-      for (Element e : elementPrimaryImages) {
-
-        // Tirando o 87x87 para pegar imagem original
-        if (primaryImage == null) {
-          primaryImage = e.attr("src").replace("/87x87", "");
-        } else {
-          secondaryImagesArray.put(e.attr("src").replace("/87x87", ""));
-        }
-
-      }
-
-      if (secondaryImagesArray.length() > 0) {
-        secondaryImages = secondaryImagesArray.toString();
-      }
-
-      // Descrição
-      String description = "";
-      Element elementDescription = doc.select("#aba-descricao").first();
-      Element elementDescription2 = doc.select("#aba-caracteristicas").first();
-
-      if (elementDescription != null) {
-        description += elementDescription.html().replace("’", "").trim();
-      }
-
-      if (elementDescription2 != null) {
-        description += elementDescription2.html().replace("’", "").trim();
-      }
-
-      // Estoque
-      Integer stock = crawlStock(doc);
-
-      // Offers
-      Offers offers = available || !marketplace.isEmpty() ? scrapBuyBox(internalPid, docMarketplace, doc) : new Offers();
-      String ean = crawlEan(doc);
-
-      List<String> eans = new ArrayList<>();
-      eans.add(ean);
-
-      Product product = new Product();
-
-      product.setUrl(this.session.getOriginalURL());
-      product.setInternalId(internalId);
-      product.setInternalPid(internalPid);
-      product.setName(name);
-      product.setPrice(price);
-      product.setPrices(prices);
-      product.setCategory1(category1);
-      product.setCategory2(category2);
-      product.setCategory3(category3);
-      product.setPrimaryImage(primaryImage);
-      product.setSecondaryImages(secondaryImages);
-      product.setDescription(description);
-      product.setStock(stock);
-      product.setMarketplace(marketplace);
-      product.setAvailable(available);
-      product.setEans(eans);
-      product.setOffers(offers);
-
-
-      products.add(product);
-
-    } else {
-      Logging.printLogDebug(logger, session, "Not a product page " + this.session.getOriginalURL());
-    }
-
-    return products;
-  }
-
-  private Offers scrapBuyBox(String internalPid, Document docMarketplace, Document doc) {
-    Offers offers = new Offers();
-
-    try {
-      boolean isBuyBoxPage = doc.selectFirst("#ModalVejaMaisParceirosProduto") != null;
-      Offer mainPage = scrapMainPage(isBuyBoxPage, doc);
-
-      if (mainPage != null) {
-        offers.add(mainPage);
-      }
-
-      if (isBuyBoxPage) {
-        scrapSellerPage(docMarketplace, isBuyBoxPage, offers);
-      }
-
-
-    } catch (OfferException e) {
-      Logging.printLogError(logger, session, CommonMethods.getStackTrace(e));
-    }
-
-    return offers;
-  }
-
-  private Offer scrapMainPage(boolean isBuyBoxPage, Document doc) throws OfferException {
-    Offer offer = null;
-
-    JSONArray jsonArray = CrawlerUtils.selectJsonArrayFromHtml(doc, "script", "var dataLayer = ", ";", false, true);
-
-    if (jsonArray.length() > 0) {
-      JSONObject jsonInfo = jsonArray.getJSONObject(0);
-
-      if (jsonInfo.has("productMarketplace") && jsonInfo.has("productPrice")) {
-        String sellerFullName = null;
-        String slugSellerName = null;
-        String internalSellerId = null;
-        Double mainPrice = null;
-        Integer mainPagePosition = 1;
-        Integer sellersPagePosition = null;
-
-        JSONObject productMarketplace = jsonInfo.getJSONObject("productMarketplace");
-
-        mainPrice = MathUtils.parseDoubleWithDot(jsonInfo.get("productPrice").toString());
-
-        if (productMarketplace.has("nomeLoja") && !productMarketplace.isNull("nomeLoja")) {
-          sellerFullName = productMarketplace.getString("nomeLoja");
-        } else {
-          sellerFullName = CrawlerUtils.scrapStringSimpleInfo(doc, ".info-parceiro strong", true);
-        }
-
-        slugSellerName = CrawlerUtils.toSlug(sellerFullName);
-
-        if (productMarketplace.has("siteId")) {
-          internalSellerId = productMarketplace.getString("siteId");
-        }
-
-        offer = new OfferBuilder().setSellerFullName(sellerFullName).setSlugSellerName(slugSellerName).setInternalSellerId(internalSellerId)
-            .setMainPagePosition(mainPagePosition).setIsBuybox(isBuyBoxPage).setMainPrice(mainPrice).setSellersPagePosition(sellersPagePosition)
+   private Document scrapVariationHTML(String url) {
+      Request request = RequestBuilder.create()
+            .setUrl(url)
+            .setCookies(cookies)
             .build();
-      }
-    }
 
-    return offer;
-  }
+      return Jsoup.parse(this.dataFetcher.get(session, request).getBody());
+   }
 
-  private void scrapSellerPage(Document docMarketplace, boolean isBuyBoxPage, Offers offers) throws OfferException {
+   private String scrapName(JSONObject obj) {
+      StringBuilder name = new StringBuilder();
+      name.append(JSONUtils.getStringValue(obj, "name"));
 
-    String sellerFullName = null;
-    String slugSellerName = null;
-    String internalSellerId = null;
-    Double mainPrice = null;
-    Integer sellersPagePosition = 1;
-
-    Elements lines = docMarketplace.select(".modal-linha-parceiro");
-
-    for (Element linePartner : lines) {
-      Element priceElement = linePartner.selectFirst(".valor-unitario");
-      Element nameElement = linePartner.selectFirst(".nome-loja > a");
-
-      if (priceElement != null) {
-        mainPrice = MathUtils.parseDoubleWithComma(priceElement.ownText());
+      JSONObject specs = JSONUtils.getJSONValue(obj, "specs");
+      for (String key : specs.keySet()) {
+         name.append(" ").append(specs.get(key));
       }
 
-      if (nameElement != null) {
-        sellerFullName = nameElement.text().trim();
-        slugSellerName = CrawlerUtils.toSlug(sellerFullName);
+      return name.toString();
+   }
+
+   private String scrapInternalId(JSONObject obj) {
+      String internalId = null;
+
+      if (obj.has("sku") && !obj.isNull("sku")) {
+         internalId = obj.get("sku").toString();
       }
 
-      internalSellerId = linePartner.attr("parceiroid");
+      return internalId;
+   }
 
-      if (mainPrice != null) {
-        Offer offer = null;
-        if (offers.contains(internalSellerId)) {
-          offer = offers.get(internalSellerId);
-          offer.setSellersPagePosition(sellersPagePosition);
-        } else {
-          offer = new OfferBuilder().setSellerFullName(sellerFullName).setSlugSellerName(slugSellerName).setInternalSellerId(internalSellerId)
-              .setIsBuybox(isBuyBoxPage).setMainPrice(mainPrice).setSellersPagePosition(sellersPagePosition).build();
-          offers.add(offer);
-        }
+   private String scrapDescription(Document doc) {
+      StringBuilder description = new StringBuilder();
+
+      Element principalDescription = doc.selectFirst("#product-description");
+      if (principalDescription != null) {
+         String iframeUrl = CrawlerUtils.scrapUrl(principalDescription, "iframe", Arrays.asList("src"), "https", "conteudo.maquinadevendas.com.br");
+
+         if (iframeUrl != null) {
+            Request request = RequestBuilder.create().setUrl(iframeUrl).build();
+            description.append(Jsoup.parse(this.dataFetcher.get(session, request).getBody()));
+
+            principalDescription.select("iframe").remove();
+         }
+
+         description.append(principalDescription.html());
       }
-      sellersPagePosition++;
-    }
-  }
 
-  /*******************************
-   * Product page identification *
-   *******************************/
+      description.append(CrawlerUtils.scrapSimpleDescription(doc, Arrays.asList("#product-features", "#product-list", "#product-provider")));
 
-  private boolean isProductPage(Document doc) {
-    return !doc.select("#ProdutoDetalhesCodigoProduto").isEmpty();
-  }
+      return description.toString();
+   }
 
-  private Document crawlDocMarketplaces(String internalPid) {
-    Document docMarketplace = new Document("");
+   private List<Document> scrapProductPagePerSeller(Document doc) {
+      List<Document> htmls = new ArrayList<>();
+      htmls.add(doc);
 
-    if (internalPid != null) {
-      String url = "https://www.ricardoeletro.com.br/Produto/VejaMaisParceiros/1/" + internalPid;
+      Elements sellers = doc.select(".product-price-marketplace .product-price-card a[href]");
+      for (Element seller : sellers) {
+         Float price = CrawlerUtils.scrapFloatPriceFromHtml(seller, ".product-price-card-price", null, true, ',', session);
 
-      Request request = RequestBuilder.create().setUrl(url).setCookies(cookies).build();
-      docMarketplace = Jsoup.parse(this.dataFetcher.get(session, request).getBody());
-    }
+         // if price is not null this seller have a offer and we need to access another url to scrap
+         // installments
+         if (price != null) {
+            String sellerUrl = CrawlerUtils.completeUrl(seller.attr("href"), "https", "www.ricardoeletro.com.br");
+            Request request = RequestBuilder.create().setUrl(sellerUrl).build();
 
-    return docMarketplace;
-  }
-
-  private String crawlInternalPid(Document doc) {
-    String internalPid = null;
-    Element pid = doc.select("input[idproduto]").first();
-
-    if (pid != null) {
-      internalPid = pid.attr("idproduto");
-    }
-
-    return internalPid;
-  }
-
-  private String crawlPrincipalSeller(Document doc) {
-    String principalSeller = null;
-
-    Element seller = doc.select(".info-parceiro strong").first();
-
-    if (seller != null) {
-      principalSeller = seller.ownText().trim().toLowerCase();
-    }
-
-    return principalSeller;
-  }
-
-
-  private Map<String, Prices> crawlMarketplaces(String internalPid, Document docMarketplace, Document doc) {
-    String principalSeller = crawlPrincipalSeller(doc);
-    Map<String, Prices> marketplace = new HashMap<>();
-
-    Elements lines = docMarketplace.select(".modal-linha-parceiro");
-
-    for (Element linePartner : lines) {
-      Element priceElement = linePartner.selectFirst(".valor-unitario");
-      Element nameElement = linePartner.selectFirst(".nome-loja > a");
-
-      if (priceElement != null && nameElement != null) {
-        String partnerName = nameElement.text().trim().toLowerCase();
-        Float partnerPrice = MathUtils.parseFloatWithComma(priceElement.ownText());
-
-        if (!partnerName.isEmpty() && partnerPrice != null) {
-          marketplace.put(partnerName, crawlPrices(doc, partnerPrice, partnerName.equals(principalSeller), internalPid));
-        }
-
+            htmls.add(Jsoup.parse(this.dataFetcher.get(session, request).getBody()));
+         }
       }
-    }
 
-    if (marketplace.isEmpty()) {
-      Element priceElement = doc.select("#ProdutoDetalhesPrecoComprarAgoraPrecoDePreco").first();
+      return htmls;
+   }
 
-      if (priceElement != null) {
-        Float price = MathUtils.parseFloatWithComma(priceElement.ownText());
+   private Offers scrapOffers(List<Document> htmls) {
+      Offers offers = new Offers();
 
-        if (price != null) {
-          marketplace.put(principalSeller, crawlPrices(doc, price, true, internalPid));
-        }
-      }
-    }
+      int position = 1;
+      for (Document doc : htmls) {
+         String sellerName = CrawlerUtils.scrapStringSimpleInfo(doc, ".product-price-details .product-price-details-sold-by b", true);
+         String sellerId = CrawlerUtils.scrapStringSimpleInfoByAttribute(doc, "#ExibeFormasPagamento[data-siteid]", "data-siteid");
+         Double price = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".product-price-details .product-price-details-new-price", null, false, ',', session);
 
-    return marketplace;
-  }
-
-  private Integer crawlStock(Document doc) {
-    Integer stock = null;
-    Elements scripts = doc.select("script");
-    JSONObject jsonDataLayer = new JSONObject();
-
-    for (Element e : scripts) {
-      String dataLayer = e.outerHtml().trim();
-
-      if (dataLayer.contains("var dataLayer = [")) {
-        int x = dataLayer.indexOf("= [") + 3;
-        int y = dataLayer.indexOf("];", x);
-
-        try {
-          jsonDataLayer = new JSONObject(dataLayer.substring(x, y));
-        } catch (JSONException jsonException) {
-          Logging.printLogWarn(logger, session, "Data layer is not a Json");
-        }
-      }
-    }
-
-    if (jsonDataLayer.has("productID")) {
-      String productId = jsonDataLayer.getString("productID");
-
-      if (jsonDataLayer.has("productSKUList")) {
-        JSONArray skus = jsonDataLayer.getJSONArray("productSKUList");
-
-        for (int i = 0; i < skus.length(); i++) {
-          JSONObject sku = skus.getJSONObject(i);
-
-          if (sku.has("id")) {
-            String id = sku.getString("id").trim();
-
-            if (id.equals(productId)) {
-
-              if (sku.has("stock") && !sku.isNull("stock")) {
-                stock = sku.getInt("stock");
-              }
-
-              break;
+         if (price != null) {
+            try {
+               Offer offer = new OfferBuilder()
+                     .setSellerFullName(sellerName)
+                     .setSlugSellerName(CrawlerUtils.toSlug(sellerName))
+                     .setInternalSellerId(sellerId)
+                     .setMainPagePosition(position)
+                     .setIsBuybox(htmls.size() > 1)
+                     .setMainPrice(price)
+                     .build();
+               offers.add(offer);
+            } catch (OfferException e) {
+               Logging.printLogError(logger, session, CommonMethods.getStackTrace(e));
             }
-          }
-        }
+         }
+
+         position++;
       }
-    }
 
-    return stock;
-  }
+      return offers;
+   }
 
-  private String crawlEan(Document doc) {
-    String ean = null;
-    Elements scripts = doc.select("script");
-    JSONObject jsonDataLayer = new JSONObject();
+   private Map<String, Prices> scrapMarketplaceMap(List<Document> htmls) {
+      Map<String, Prices> marketplaceMap = new HashMap<>();
 
-    for (Element e : scripts) {
-      String dataLayer = e.outerHtml().trim();
+      for (Document doc : htmls) {
+         String sellerName = CrawlerUtils.scrapStringSimpleInfo(doc, ".product-price-details .product-price-details-sold-by b", true).toLowerCase();
+         Prices prices = scrapPrices(doc);
 
-      if (dataLayer.contains("var dataLayer = [")) {
-        int x = dataLayer.indexOf("= [") + 3;
-        int y = dataLayer.indexOf("];", x);
-
-        try {
-          jsonDataLayer = new JSONObject(dataLayer.substring(x, y));
-        } catch (JSONException jsonException) {
-          Logging.printLogWarn(logger, session, "Data layer is not a Json");
-        }
+         if (!prices.isEmpty()) {
+            marketplaceMap.put(sellerName, prices);
+         }
       }
-    }
 
-    if (jsonDataLayer.has("productEAN13")) {
-      ean = jsonDataLayer.getString("productEAN13");
-      ean = ean.isEmpty() ? null : ean;
-    }
+      return marketplaceMap;
+   }
 
-    return ean;
-  }
+   private Prices scrapPrices(Document doc) {
+      Prices prices = new Prices();
 
-  private Prices crawlPrices(Document doc, Float price, boolean principalSeller, String internalPid) {
-    Prices prices = new Prices();
+      Float price = CrawlerUtils.scrapFloatPriceFromHtml(doc, ".product-price-details .product-price-details-new-price", null, false, ',', session);
+      if (price != null) {
+         Map<Integer, Float> installments = new HashMap<>();
+         installments.put(1, price);
 
-    if (price != null) {
-      Map<Integer, Float> installmentsPriceMap = new HashMap<>();
-      installmentsPriceMap.put(1, price);
-      prices.setBankTicketPrice(price);
+         prices.setBankTicketPrice(price);
+         prices.setPriceFrom(CrawlerUtils.scrapDoublePriceFromHtml(doc, ".product-price-details .product-price-details-old-price", null, false, ',', session));
 
-      if (principalSeller) {
-        Float bankPrice = CrawlerUtils.scrapSimplePriceFloat(doc, ".produto-detalhes-preco-destaque-a-vista span[id]", true);
-        if (bankPrice != null) {
-          prices.setBankTicketPrice(bankPrice);
-        }
-
-        String url = "https://www.ricardoeletro.com.br/Pagamento/ExibeFormasPagamento/" + internalPid;
-        Request request = RequestBuilder.create().setUrl(url).setCookies(cookies).build();
-        Document docPrices = Jsoup.parse(this.dataFetcher.get(session, request).getBody());
-
-        Elements installmentsElements = docPrices.select(".lista-parcelas tr");
-
-        if (!installmentsElements.isEmpty()) {
-          for (Element e : installmentsElements) {
-            Elements values = e.select("td");
-
-            if (values.size() > 2) {
-              String installment = values.get(0).ownText().replaceAll("[^0-9]", "").trim();
-              Float value = MathUtils.parseFloatWithComma(values.get(2).ownText());
-
-              if (!installment.isEmpty() && value != null) {
-                installmentsPriceMap.put(Integer.parseInt(installment), value);
-              }
+         Elements installmentsElements = doc.select(".product-price-details  .product-price-details-installments:not(:last-child) b");
+         for (Element e : installmentsElements) {
+            Pair<Integer, Float> pair = CrawlerUtils.crawlSimpleInstallment(null, e, true);
+            if (!pair.isAnyValueNull()) {
+               installments.put(pair.getFirst(), pair.getSecond());
             }
-          }
-        } else {
-          Element parcel1 = doc.select(".produto-detalhes-preco-parcelado-parcelas").first();
-          setParcels(parcel1, installmentsPriceMap);
+         }
 
-          Elements parcels = doc.select(".produto-detalhes-preco-parcelado");
-          if (parcels.size() > 1) {
-            setParcels(parcels.get(1), installmentsPriceMap);
-          }
-        }
+         prices.insertCardInstallment(Card.VISA.toString(), installments);
+         prices.insertCardInstallment(Card.DINERS.toString(), installments);
+         prices.insertCardInstallment(Card.MASTERCARD.toString(), installments);
+         prices.insertCardInstallment(Card.HIPERCARD.toString(), installments);
+         prices.insertCardInstallment(Card.AMEX.toString(), installments);
       }
 
-      prices.insertCardInstallment(Card.VISA.toString(), installmentsPriceMap);
-      prices.insertCardInstallment(Card.DINERS.toString(), installmentsPriceMap);
-      prices.insertCardInstallment(Card.MASTERCARD.toString(), installmentsPriceMap);
-      prices.insertCardInstallment(Card.HIPERCARD.toString(), installmentsPriceMap);
-      prices.insertCardInstallment(Card.AMEX.toString(), installmentsPriceMap);
-    }
+      return prices;
+   }
 
-    return prices;
-  }
+   /**
+    * Crawl rating and reviews stats using the bazaar voice endpoint. To get only the stats summary we
+    * need at first, we only have to do one request. If we want to get detailed information about each
+    * review, we must perform pagination.
+    * 
+    * The RatingReviews crawled in this method, is the same across all skus variations in a page.
+    *
+    * @param document
+    * @return
+    */
+   private RatingsReviews scrapRating(Document doc) {
+      RatingsReviews ratingReviews = new RatingsReviews();
 
-  private Prices crawlPricesPrinciaplSeller(Map<String, Prices> marketplaceMap) {
-    if (marketplaceMap.containsKey(SELLER_NAME)) {
-      return marketplaceMap.get(SELLER_NAME);
-    }
+      ratingReviews.setDate(session.getDate());
 
-    return new Prices();
-  }
+      Integer totalReviews = scrapReviewsCount(doc);
+      ratingReviews.setTotalRating(totalReviews);
+      ratingReviews.setTotalWrittenReviews(totalReviews);
+      ratingReviews.setAverageOverallRating(scrapAverageOverallRating(doc));
+      ratingReviews.setAdvancedRatingReview(scrapTotalOfRewviesPerEachStar(doc));
 
-  private void setParcels(Element e, Map<Integer, Float> installmentsPriceMap) {
-    if (e != null) {
-      String parcela = e.text().toLowerCase();
+      return ratingReviews;
+   }
 
-      int x = parcela.indexOf("x");
-      int y = parcela.indexOf("r$");
+   private Integer scrapReviewsCount(Document doc) {
+      return doc.select(".product-comments-body-comment-stars").size();
+   }
 
-      Integer installment = Integer.parseInt(parcela.substring(0, x).replaceAll("[^0-9]", "").trim());
-      Float priceInstallment = Float.parseFloat(parcela.substring(y).replaceAll("[^0-9,]+", "").replaceAll("\\.", "").replaceAll(",", ".").trim());
+   private Double scrapAverageOverallRating(Document doc) {
+      Double avgOverallRating = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".product-comments-body-grade", null, true, '.', session);
 
-      installmentsPriceMap.put(installment, priceInstallment);
-    }
-  }
+      if (avgOverallRating == null) {
+         avgOverallRating = 0d;
+      }
+      return avgOverallRating;
+   }
+
+   private AdvancedRatingReview scrapTotalOfRewviesPerEachStar(Document doc) {
+      Integer star1 = 0;
+      Integer star2 = 0;
+      Integer star3 = 0;
+      Integer star4 = 0;
+      Integer star5 = 0;
+
+      Elements reviews = doc.select(".product-comments-body-comment-stars");
+      for (Element e : reviews) {
+         int numberOfStars = e.select("img[src=/public/img/star-full.svg]").size();
+
+         if (numberOfStars == 1) {
+            star1++;
+         } else if (numberOfStars == 2) {
+            star2++;
+         } else if (numberOfStars == 3) {
+            star3++;
+         } else if (numberOfStars == 4) {
+            star4++;
+         } else if (numberOfStars == 5) {
+            star5++;
+         }
+      }
+
+      return new AdvancedRatingReview.Builder()
+            .totalStar1(star1)
+            .totalStar2(star2)
+            .totalStar3(star3)
+            .totalStar4(star4)
+            .totalStar5(star5)
+            .build();
+   }
 }
